src/main/java/com/example/banklib/error/exception/CustomerException.java
package com.example.banklib.error.exception;

public class CustomerException extends RuntimeException {
    public CustomerException(String message) {
        super(message);
    }
}